--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,3 +23,26 @@ body {
 #user-name.show-name {
     display: block;
 }
+
+@keyframes Up {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-10px);
+    }
+
+    60% {
+        transform: translateY(-5px);
+    }
+}
+
+.up {
+    animation: Up 1.5s infinite;
+}
